force-app/main/default/objects/NSSales_AllCaseRollups__c/NSSales_AllCaseRollups__c.object-meta.xml
<CustomObject>
    <description>This object will display all cases that are under a given account based on the hierarchy. Cases from all child accounts should roll up to its ultimate parent.</description>
    <label>All Case Rollups</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Case Rollup</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Case Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>