force-app/main/default/objects/NSSales_AllCaseRollups__c/fields/NSSales_Account__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account for the case</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>All Case Rollups</relationshipLabel>
    <relationshipName>All_Case_Rollups</relationshipName>
    <type>Lookup</type>
</CustomField>