force-app/main/default/objects/NSSales_AllCaseRollups__c/fields/NSSales_AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>NSSales_AssignedTo__c</fullName>
    <description>Assigned to of the related case</description>
    <formula>NSSales_Case__r.NS_AssignedTo__r.FirstName &amp; &#39; &#39; &amp;   NSSales_Case__r.NS_AssignedTo__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>