force-app/main/default/objects/NSSales_AllCaseRollups__c/fields/NSSales_Case__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Case__c</fullName>
    <description>Case Related to a particular record</description>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>All Case Rollups</relationshipLabel>
    <relationshipName>All_Case_Rollups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>