force-app/main/default/objects/NSSales_AllCaseRollups__c/fields/NSSales_DateTimeOpened__c.field-meta.xml
<CustomField>
    <fullName>NSSales_DateTimeOpened__c</fullName>
    <description>Opened date/time of the related case</description>
    <formula>NSSales_Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>