force-app/main/default/objects/NSSales_AllCaseRollups__c/fields/NSSales_InteractionCategory__c.field-meta.xml
<CustomField>
    <fullName>NSSales_InteractionCategory__c</fullName>
    <description>Interaction Category of the related case</description>
    <formula>Text(NSSales_Case__r.NS_InteractionCategory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Category</label>
    <type>Text</type>
</CustomField>