force-app/main/default/objects/NSSales_AllCaseRollups__c/fields/NSSales_InteractionReason__c.field-meta.xml
<CustomField>
    <fullName>NSSales_InteractionReason__c</fullName>
    <description>Interaction Reason of the related case</description>
    <formula>Text(NSSales_Case__r.NS_InteractionReason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Reason</label>
    <type>Text</type>
</CustomField>