force-app/main/default/objects/NSSales_AllCaseRollups__c/fields/NSSales_LastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>NSSales_LastModifiedDateTime__c</fullName>
    <description>Last modified date/time of the related case</description>
    <formula>NSSales_Case__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>