force-app/main/default/objects/NSSales_AllCaseRollups__c/fields/NSSales_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OwnerName__c</fullName>
    <description>Owner name of the related case</description>
    <formula>IF( 
  ISBLANK(NSSales_Case__r.Owner:Queue.Id),
  NSSales_Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; NSSales_Case__r.Owner:User.LastName,
  NSSales_Case__r.Owner:Queue.QueueName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>