force-app/main/default/objects/NSSales_AllCaseRollups__c/fields/NSSales_Status__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Status__c</fullName>
    <description>Status of the related case</description>
    <formula>CASE(NSSales_Case__r.Status,
  &quot;NS_Escalated&quot;, &quot;Escalated&quot;,
  &quot;NS_Closed&quot;, &quot;Closed&quot;,
  &quot;NS_New&quot;, &quot;New&quot;,
  &quot;NS_Working&quot;, &quot;Working&quot;,
  &quot;NS_AwaitingResponse&quot;, &quot;Awaiting Response&quot;,
  &quot;NS_Cancelled&quot;,&quot;Cancelled&quot;,
  &quot;NS_Reopened&quot;,&quot;Reopened&quot;,
 &quot;Open&quot;,&quot;Open&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>